# SimulateInput

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: automation-platform-design.md  cross-platform-installation.md
skills/simulateinput/: SKILL.md
skills/simulateinput/agents/: openai.yaml
skills/simulateinput/references/: cli-usage.md  mcp-tools.md
src/simulateinput/: __init__.py
src/simulateinput/actions/: __init__.py  click.py  drag.py  type_text.py  wait_for.py
src/simulateinput/cli/: __init__.py  main.py
src/simulateinput/core/: __init__.py  engine.py  errors.py  models.py  policy.py  session.py
src/simulateinput/drivers/: __init__.py  base.py  diagnostics.py  registry.py
src/simulateinput/drivers/browser/: __init__.py
src/simulateinput/drivers/linux_wayland/: __init__.py
src/simulateinput/drivers/linux_x11/: __init__.py
src/simulateinput/drivers/macos/: __init__.py
src/simulateinput/drivers/windows/: __init__.py
src/simulateinput/locators/: __init__.py  base.py  image.py  ocr.py  selector.py  uia.py
src/simulateinput/mcp/: __init__.py  server.py
src/simulateinput/reporting/: __init__.py  logger.py  report_builder.py  screenshots.py
src/simulateinput/runner/: __init__.py  case_runner.py
tests/: __init__.py
tests/e2e/cases/: linux-wayland-smoke.yaml  linux-x11-smoke.yaml  macos-smoke.yaml  windows-smoke.yaml
tests/unit/: __init__.py  test_case_runner.py  test_cli_main.py  test_driver_registry.py  test_engine_actions.py  test_macos_driver.py  test_mcp_server.py  test_session_store.py
